Remove left alignment of p elements for workshop It's no longer necessary since we left align the entire slide

--- a/css/workshop.scss
+++ b/css/workshop.scss
@@ -74,10 +74,6 @@ $selectionColor: $white;
   height: 30vh;
 }
 
-.reveal p {
-  text-align: left;
-}
-
 .reveal ol, .reveal dl, .reveal ul {
   display: block;
 }
